# clishare

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20240925142659_api_key.sql
src/lib/: data.rs  mod.rs  web.rs
src/lib/data/: model.rs  query.rs
src/lib/domain/: clip.rs  maintenance.rs  time.rs
src/lib/domain/clip/: field.rs
src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  password.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs
src/lib/web/: api.rs  ctx.rs  hit_counter.rs  http.rs  renderer.rs
static/: clishare.css  tiny-date-picker.min.js
templates/: base.hbs  clip.hbs  clip_need_password.hbs  error_box.hbs  footer.hbs  header.hbs  home.hbs
