[package]
name = "clishare"
version = "0.1.0"
edition = "2021"

[lib]
name = "clishare"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
